--- a/p8105_hw3_rk3445.md
+++ b/p8105_hw3_rk3445.md
@@ -26,34 +26,69 @@ data("instacart")
 
 The `instacart` dataset provides item-level records of customer grocery
 orders from the Instacart delivery service. This dataset contains
-1384617 observations and 15 variables (columns).
+1384617 observations and 15 variables (columns), where each row
+represents a single product within an order.
 
-Each row represents a single product within an order, the data includes
-the name of the product (`product_name`), customer identifier
-(`user_id`), the hour of the day on which the order was placed
-(`order_hour_of_day`), aisle identifier (`aisle_id`), the recency of the
-previous order (`days_since_prior_order`), an indication whether an item
-is a `reordered` and etc.
+Key variables in the dataset are following:
 
 ``` r
-instacart = instacart |> 
+user = instacart |> 
   janitor::clean_names() |> 
-  mutate(
-    order_dow_label = lubridate::wday(order_dow + 1, label = TRUE, abbr = FALSE)
-  )
+  group_by(user_id) |> 
+  summarize(n_order = n()) |> 
+  arrange(desc(n_order)) 
 ```
+
+- `user_id` is used for identifying each customers in the dataset, there
+  are 131209 distinct customers in the instacart, which enables to
+  analyze behavior at the customer level. Both 149753 and 197541 ordered
+  the most, with 80 orders each.
+
+``` r
+pop_product = instacart |> 
+  janitor::clean_names() |> 
+  group_by(product_name) |> 
+  summarize(n_product = n()) |> 
+  arrange(desc(n_product)) 
+```
+
+- `product_name` and `product_id` are for identifying the specific
+  product purchased, having 39123 unique products in the dataset. The
+  most popular product are Banana with 18726 orders , followed by Bag of
+  Organic Bananas with 15480 orders.
+
+- `aisle_id`, `aisle`, `department_id` and `department` are variables
+  for identifying the location of products and enabling grouping
+  products. The products are organized into 134 aisles and 21
+  departments.
+
+``` r
+day_order = instacart |> 
+  janitor::clean_names() |>
+  mutate(
+    order_dow_label = wday(order_dow + 1, label = TRUE, abbr = FALSE)
+  ) |> 
+  group_by(order_dow_label) |> 
+  summarize(n_order = n())
+```
+
+- `order_dow`, `order_hour_of_day` indicate the time of orders from
+  users. `days_since_prior_order` shows the how many days passed between
+  orders with an average of 17.1 days. Those variables are used to see
+  shopping habits of customers over time. `order_dow` is formatted in
+  number so I created `order_dow_label` variable to easily notice the
+  day of week. People usually buy their groceries on Sunday the most.
 
 For example, in the first row of the dataset:
 
 - `user_id`: 112108  
 - `order_id`: 1  
-- `order_dow_label` : Thursday
-- `order_hour_of_day`: 10  
+- `order_hour_of_day` : 10
 - `product_name`: Bulgarian Yogurt  
 - `aisle`: yogurt
 
-This shows that customer with id 112108 placed order 1 at 10 o’clock on
-Thursday and purchased Bulgarian Yogurt from the yogurt aisle.
+This shows that customer with id 112108 placed 1 order at 10 o’clock and
+purchased Bulgarian Yogurt from the yogurt aisle.
 
 **How many aisles are there, and which aisles are the most items ordered
 from?**
@@ -81,7 +116,7 @@ instacart |>
     ## # ℹ 124 more rows
 
 The total number of unique aisles in the instacart dataset is 134 and
-the most items are ordered from fresh vegetables aisles.
+the most items are ordered from fresh vegetables aisle.
 
 **Make a plot that shows the number of items ordered in each aisle,
 limiting this to aisles with more than 10000 items ordered. Arrange
@@ -96,14 +131,14 @@ instacart |>
   geom_col() +
   coord_flip() +
   labs(
-    title = "Number of Items Ordered by Aisle (>10,000 orders)",
+    title = "Number of Items Ordered by Aisle (>10,000)",
     x = "Aisle",
     y = "Number of Items Ordered"
   ) +
-  theme_minimal()
+  theme_minimal(base_size = 13)
 ```
 
-![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-4-1.png)<!-- -->
+![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-6-1.png)<!-- -->
 
 **Make a table showing the three most popular items in each of the
 aisles “baking ingredients”, “dog food care”, and “packaged vegetables
@@ -138,12 +173,19 @@ instacart |>
 Apples and Coffee Ice Cream are ordered on each day of the week; format
 this table for human readers (i.e. produce a 2 x 7 table).**
 
+As `order_dow` variable has values from 0 to 6, I converted these
+numbers into human-readable weekday names in variable `order_dow_label.`
+
 ``` r
 instacart |> 
   filter(product_name %in% c("Pink Lady Apples", "Coffee Ice Cream")) |> 
+  mutate(
+    order_dow_label = wday(order_dow + 1, label = TRUE, abbr = FALSE)
+  ) |> 
   group_by(product_name, order_dow_label) |> 
   summarize(
-    mean_hour = mean(order_hour_of_day, na.rm = TRUE), .groups = "drop"
+    mean_hour = round(mean(order_hour_of_day, na.rm = TRUE), digit = 2), 
+    .groups = "drop"
   ) |> 
   pivot_wider(
     names_from = order_dow_label,
@@ -152,10 +194,10 @@ instacart |>
   knitr::kable()
 ```
 
-| product_name | Sunday | Monday | Tuesday | Wednesday | Thursday | Friday | Saturday |
-|:---|---:|---:|---:|---:|---:|---:|---:|
-| Coffee Ice Cream | 13.77419 | 14.31579 | 15.38095 | 15.31818 | 15.21739 | 12.26316 | 13.83333 |
-| Pink Lady Apples | 13.44118 | 11.36000 | 11.70213 | 14.25000 | 11.55172 | 12.78431 | 11.93750 |
+| product_name     | Sunday | Monday | Tuesday | Wednesday | Thursday | Friday | Saturday |
+|:-----------------|-------:|-------:|--------:|----------:|---------:|-------:|---------:|
+| Coffee Ice Cream |  13.77 |  14.32 |   15.38 |     15.32 |    15.22 |  12.26 |    13.83 |
+| Pink Lady Apples |  13.44 |  11.36 |   11.70 |     14.25 |    11.55 |  12.78 |    11.94 |
 
 # Problem 2
 
@@ -237,75 +279,234 @@ year (not month). Comment on trends in this table.**
 
 ``` r
 zillow_nyc |> 
-  mutate(
-    year = str_sub(date, 1, 4) 
-  ) |> 
+  mutate(year = str_sub(date, 1, 4)) |> 
   group_by(county_name, year) |> 
   summarize(
     avg_rental_price = mean(zori, na.rm = TRUE)
   ) |> 
-  knitr::kable()
+  knitr::kable(
+    digits = 0,
+    caption = "Average Rental Price (ZORI) by NYC counties and Year",
+    col.names = c("Borough (County)", "Year", "Average ZORI")
+  )
 ```
 
     ## `summarise()` has grouped output by 'county_name'. You can override using the
     ## `.groups` argument.
 
-| county_name | year | avg_rental_price |
-|:------------|:-----|-----------------:|
-| Bronx       | 2015 |         1759.595 |
-| Bronx       | 2016 |         1520.194 |
-| Bronx       | 2017 |         1543.599 |
-| Bronx       | 2018 |         1639.430 |
-| Bronx       | 2019 |         1705.589 |
-| Bronx       | 2020 |         1811.443 |
-| Bronx       | 2021 |         1857.777 |
-| Bronx       | 2022 |         2054.267 |
-| Bronx       | 2023 |         2285.459 |
-| Bronx       | 2024 |         2496.896 |
-| Kings       | 2015 |         2492.928 |
-| Kings       | 2016 |         2520.357 |
-| Kings       | 2017 |         2545.828 |
-| Kings       | 2018 |         2547.291 |
-| Kings       | 2019 |         2630.504 |
-| Kings       | 2020 |         2555.051 |
-| Kings       | 2021 |         2549.890 |
-| Kings       | 2022 |         2868.199 |
-| Kings       | 2023 |         3015.184 |
-| Kings       | 2024 |         3126.803 |
-| New York    | 2015 |         3022.042 |
-| New York    | 2016 |         3038.818 |
-| New York    | 2017 |         3133.848 |
-| New York    | 2018 |         3183.703 |
-| New York    | 2019 |         3310.408 |
-| New York    | 2020 |         3106.517 |
-| New York    | 2021 |         3136.632 |
-| New York    | 2022 |         3778.375 |
-| New York    | 2023 |         3932.610 |
-| New York    | 2024 |         4078.440 |
-| Queens      | 2015 |         2214.707 |
-| Queens      | 2016 |         2271.955 |
-| Queens      | 2017 |         2263.303 |
-| Queens      | 2018 |         2291.918 |
-| Queens      | 2019 |         2387.816 |
-| Queens      | 2020 |         2315.632 |
-| Queens      | 2021 |         2210.787 |
-| Queens      | 2022 |         2406.038 |
-| Queens      | 2023 |         2561.615 |
-| Queens      | 2024 |         2694.022 |
-| Richmond    | 2015 |              NaN |
-| Richmond    | 2016 |              NaN |
-| Richmond    | 2017 |              NaN |
-| Richmond    | 2018 |              NaN |
-| Richmond    | 2019 |              NaN |
-| Richmond    | 2020 |         1977.608 |
-| Richmond    | 2021 |         2045.430 |
-| Richmond    | 2022 |         2147.436 |
-| Richmond    | 2023 |         2332.934 |
-| Richmond    | 2024 |         2536.442 |
+| Borough (County) | Year | Average ZORI |
+|:-----------------|:-----|-------------:|
+| Bronx            | 2015 |         1760 |
+| Bronx            | 2016 |         1520 |
+| Bronx            | 2017 |         1544 |
+| Bronx            | 2018 |         1639 |
+| Bronx            | 2019 |         1706 |
+| Bronx            | 2020 |         1811 |
+| Bronx            | 2021 |         1858 |
+| Bronx            | 2022 |         2054 |
+| Bronx            | 2023 |         2285 |
+| Bronx            | 2024 |         2497 |
+| Kings            | 2015 |         2493 |
+| Kings            | 2016 |         2520 |
+| Kings            | 2017 |         2546 |
+| Kings            | 2018 |         2547 |
+| Kings            | 2019 |         2631 |
+| Kings            | 2020 |         2555 |
+| Kings            | 2021 |         2550 |
+| Kings            | 2022 |         2868 |
+| Kings            | 2023 |         3015 |
+| Kings            | 2024 |         3127 |
+| New York         | 2015 |         3022 |
+| New York         | 2016 |         3039 |
+| New York         | 2017 |         3134 |
+| New York         | 2018 |         3184 |
+| New York         | 2019 |         3310 |
+| New York         | 2020 |         3107 |
+| New York         | 2021 |         3137 |
+| New York         | 2022 |         3778 |
+| New York         | 2023 |         3933 |
+| New York         | 2024 |         4078 |
+| Queens           | 2015 |         2215 |
+| Queens           | 2016 |         2272 |
+| Queens           | 2017 |         2263 |
+| Queens           | 2018 |         2292 |
+| Queens           | 2019 |         2388 |
+| Queens           | 2020 |         2316 |
+| Queens           | 2021 |         2211 |
+| Queens           | 2022 |         2406 |
+| Queens           | 2023 |         2562 |
+| Queens           | 2024 |         2694 |
+| Richmond         | 2015 |          NaN |
+| Richmond         | 2016 |          NaN |
+| Richmond         | 2017 |          NaN |
+| Richmond         | 2018 |          NaN |
+| Richmond         | 2019 |          NaN |
+| Richmond         | 2020 |         1978 |
+| Richmond         | 2021 |         2045 |
+| Richmond         | 2022 |         2147 |
+| Richmond         | 2023 |         2333 |
+| Richmond         | 2024 |         2536 |
 
-Make a plot showing NYC Rental Prices within ZIP codes for all available
-years. Your plot should facilitate comparisons across boroughs. Comment
-on any significant elements of this plot.
+Average Rental Price (ZORI) by NYC counties and Year
+
+From the table, we can see the upward trend in rental prices over time
+for all boroughs in New York City. However, in 2021, both Kings and
+Queens has dropped compared to year of 2020. This was mainly due to the
+COVID-19 pandemic. By 2022 and 2023, prices in all boroughs, including
+Kings and Queens, rebounded sharply, surpassing pre-pandemic price.
+
+**Make a plot showing NYC Rental Prices within ZIP codes for all
+available years. Your plot should facilitate comparisons across
+boroughs. Comment on any significant elements of this plot.**
+
+``` r
+zillow_nyc |> 
+  mutate(year = str_sub(date, 1, 4)) |>  
+  ggplot(aes(x = year, y = zori, color = county_name)) +
+  geom_point(alpha = .3) +
+  geom_smooth() +
+  labs(
+    title = "NYC Rental Prices (ZORI) Across ZIP Codes Over Time",
+    x = "Year",
+    y = "ZORI (Rental Price Index)",
+    color = "County"
+  ) 
+```
+
+    ## `geom_smooth()` using method = 'loess' and formula = 'y ~ x'
+
+    ## Warning: Removed 6834 rows containing non-finite outside the scale range
+    ## (`stat_smooth()`).
+
+    ## Warning: Removed 6834 rows containing missing values or values outside the scale range
+    ## (`geom_point()`).
+
+![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-13-1.png)<!-- -->
+
+``` r
+zillow_nyc %>% 
+  mutate(year = str_sub(date, 1, 4)) %>%
+  group_by(county_name, year) %>%
+  summarize(avg_zori = mean(zori, na.rm = TRUE)) %>%
+  ggplot(aes(x = year, y = avg_zori, color = county_name)) +
+  geom_line(size = 1) +
+  geom_point() +
+  labs(
+    title = "Average Rental Price Trends Across NYC Boroughs",
+    x = "Year",
+    y = "Average ZORI",
+    color = "Borough"
+  ) +
+  theme_minimal()
+```
+
+    ## `summarise()` has grouped output by 'county_name'. You can override using the
+    ## `.groups` argument.
+
+    ## Warning: Using `size` aesthetic for lines was deprecated in ggplot2 3.4.0.
+    ## ℹ Please use `linewidth` instead.
+    ## This warning is displayed once every 8 hours.
+    ## Call `lifecycle::last_lifecycle_warnings()` to see where this warning was
+    ## generated.
+
+    ## Warning: Removed 5 rows containing missing values or values outside the scale range
+    ## (`geom_line()`).
+
+    ## `geom_line()`: Each group consists of only one observation.
+    ## ℹ Do you need to adjust the group aesthetic?
+
+    ## Warning: Removed 5 rows containing missing values or values outside the scale range
+    ## (`geom_point()`).
+
+![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-14-1.png)<!-- -->
+
+``` r
+zillow_nyc |> 
+  mutate(year = str_sub(date, 1, 4)) |> 
+  ggplot(aes(x = year, y = zori, color = county_name)) +
+  geom_point(alpha = 0.4) +
+  geom_smooth(se = FALSE) + 
+  facet_grid(. ~ county_name) +
+  labs(
+    title = "Distribution of Rental Prices by Borough and Year",
+    x = "Year",
+    y = "ZORI (Rental Price Index)",
+    fill = "County"
+  ) +
+  theme_minimal()
+```
+
+    ## `geom_smooth()` using method = 'loess' and formula = 'y ~ x'
+
+    ## Warning: Removed 6834 rows containing non-finite outside the scale range
+    ## (`stat_smooth()`).
+
+    ## Warning: Removed 6834 rows containing missing values or values outside the scale range
+    ## (`geom_point()`).
+
+![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-15-1.png)<!-- -->
+
+``` r
+zillow_nyc %>% 
+  mutate(year = as.numeric(str_sub(date, 1, 4))) %>%  
+  ggplot(aes(x = year, y = zori, color = county_name)) +
+  geom_point(alpha = 0.2, size = 0.7) +   # ZIP-level points
+  geom_smooth(se = FALSE, size = 1.2) +  # Borough trend highlight
+  labs(
+    title = "NYC Rental Prices Within ZIP Codes Over Time",
+    subtitle = "ZIP-level data with borough-level trend lines",
+    x = "Year",
+    y = "ZORI (Rental Price Index)",
+    color = "Borough"
+  ) +
+  theme_minimal()
+```
+
+    ## `geom_smooth()` using method = 'gam' and formula = 'y ~ s(x, bs = "cs")'
+
+    ## Warning: Removed 6834 rows containing non-finite outside the scale range
+    ## (`stat_smooth()`).
+
+    ## Warning: Failed to fit group 5.
+    ## Caused by error in `smooth.construct.cr.smooth.spec()`:
+    ## ! x has insufficient unique values to support 10 knots: reduce k.
+
+    ## Warning: Removed 6834 rows containing missing values or values outside the scale range
+    ## (`geom_point()`).
+
+![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-16-1.png)<!-- -->
+
+``` r
+zillow_nyc |> 
+  mutate(year = as.integer(str_sub(date, 1, 4)))  |> 
+  group_by(zip_code, county_name, year) |> 
+  summarize(avg_zori = mean(zori, na.rm = TRUE), .groups = "drop") |> 
+  ggplot(aes(x = year, y = avg_zori, group = zip_code, color = county_name)) +
+  geom_line(alpha = 0.15) +
+  stat_summary(
+    aes(group = county_name), fun = mean, geom = "line", size = 1.5, alpha = 0.9
+  ) +
+  labs(
+    title = "ZIP-Level Rental Price Trends with Borough Averages",
+    subtitle = "Thin lines = individual ZIP codes, Thick lines = county-wide trend",
+    x = "Year",
+    y = "ZORI (Rental Price Index)",
+    color = "County"
+  ) + 
+  scale_x_continuous(
+    breaks = c(2015, 2017, 2019, 2021, 2023),
+    labels = c("2015", "2017", "2019", "2021", "2023")
+  ) +
+  theme_minimal()
+```
+
+    ## Warning: Removed 531 rows containing non-finite outside the scale range
+    ## (`stat_summary()`).
+
+    ## Warning: Removed 531 rows containing missing values or values outside the scale range
+    ## (`geom_line()`).
+
+![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-17-1.png)<!-- -->
 
 Compute the average rental price within each ZIP code over each month in
 2023. Make a reader-friendly plot showing the distribution of
