--- a/p8105_hw3_rk3445.Rmd
+++ b/p8105_hw3_rk3445.Rmd
@@ -211,71 +211,6 @@ From the table, we can see the upward trend in rental prices over time for all b
 
 **Make a plot showing NYC Rental Prices within ZIP codes for all available years. Your plot should facilitate comparisons across boroughs. Comment on any significant elements of this plot.**
 
-```{r}
-zillow_nyc |> 
-  mutate(year = str_sub(date, 1, 4)) |>  
-  ggplot(aes(x = year, y = zori, color = county_name)) +
-  geom_point(alpha = .3) +
-  geom_smooth() +
-  labs(
-    title = "NYC Rental Prices (ZORI) Across ZIP Codes Over Time",
-    x = "Year",
-    y = "ZORI (Rental Price Index)",
-    color = "County"
-  ) 
-
-```
-
-```{r}
-zillow_nyc %>% 
-  mutate(year = str_sub(date, 1, 4)) %>%
-  group_by(county_name, year) %>%
-  summarize(avg_zori = mean(zori, na.rm = TRUE)) %>%
-  ggplot(aes(x = year, y = avg_zori, color = county_name)) +
-  geom_line(size = 1) +
-  geom_point() +
-  labs(
-    title = "Average Rental Price Trends Across NYC Boroughs",
-    x = "Year",
-    y = "Average ZORI",
-    color = "Borough"
-  ) +
-  theme_minimal()
-
-```
-
-
-```{r}
-zillow_nyc |> 
-  mutate(year = str_sub(date, 1, 4)) |> 
-  ggplot(aes(x = year, y = zori, color = county_name)) +
-  geom_point(alpha = 0.4) +
-  geom_smooth(se = FALSE) + 
-  facet_grid(. ~ county_name) +
-  labs(
-    title = "Distribution of Rental Prices by Borough and Year",
-    x = "Year",
-    y = "ZORI (Rental Price Index)",
-    fill = "County"
-  ) +
-  theme_minimal()
-```
-
-```{r}
-zillow_nyc %>% 
-  mutate(year = as.numeric(str_sub(date, 1, 4))) %>%  
-  ggplot(aes(x = year, y = zori, color = county_name)) +
-  geom_point(alpha = 0.2, size = 0.7) +   # ZIP-level points
-  geom_smooth(se = FALSE, size = 1.2) +  # Borough trend highlight
-  labs(
-    title = "NYC Rental Prices Within ZIP Codes Over Time",
-    subtitle = "ZIP-level data with borough-level trend lines",
-    x = "Year",
-    y = "ZORI (Rental Price Index)",
-    color = "Borough"
-  ) +
-  theme_minimal()
-```
 
 ```{r}
 zillow_nyc |> 
@@ -302,7 +237,27 @@ zillow_nyc |>
 
 ```
 
-Compute the average rental price within each ZIP code over each month in 2023. Make a reader-friendly plot showing the distribution of ZIP-code-level rental prices across boroughs; put differently, your plot should facilitate the comparison of the distribution of average rental prices across boroughs. Comment on this plot.
+This plot shows rental price trends in New York City across ZIP codes and counties from 2015 to 2024. Only Richmond county has a record from 2020 to 2024. The Zillow Observed Rent Index (ZORI) has a steady upward trend, with a noticeable acceleration after 2021. The thin lines indicate individual ZIP codes, showing substantial within-county variation. New York county has the widest spread upuntil 8000 ZORI and it stands out with the highest rent levels among five counties and the steepest increase from 2021 to 2022. 
+
+
+**Compute the average rental price within each ZIP code over each month in 2023. Make a reader-friendly plot showing the distribution of ZIP-code-level rental prices across boroughs; put differently, your plot should facilitate the comparison of the distribution of average rental prices across boroughs. Comment on this plot.**
+
+!! question!
+The question says over each month but the zillow data already provides the monthly based rental price for each zip code. Does it mean that we need to compute the average over 2023?
+```{r}
+zillow_nyc |> 
+  separate(
+    date, into = c("year", "month", "day")
+  )  |> 
+  filter(year == 2023) |> 
+  group_by(zip_code, county_name) |> 
+  summarize(avg_zori = mean(zori)) |> 
+  ggplot(aes(y = avg_zori, fill = county_name)) +
+  geom_point() +
+  theme_minimal() +
+  theme(legend.position = "bottom") 
+```
+
 
 Combine the two previous plots into a single graphic, and export this to a results folder in your repository.
 
