--- a/p8105_hw3_rk3445.md
+++ b/p8105_hw3_rk3445.md
@@ -2,8 +2,6 @@ p8105_hw3_rk3445
 ================
 Rosie Kwon
 
-# Problem 1
-
 ``` r
 library(tidyverse)
 ```
@@ -20,6 +18,12 @@ library(tidyverse)
     ## ℹ Use the conflicted package (<http://conflicted.r-lib.org/>) to force all conflicts to become errors
 
 ``` r
+library(patchwork)
+```
+
+# Problem 1
+
+``` r
 library(p8105.datasets)
 data("instacart")
 ```
@@ -32,7 +36,8 @@ represents a single product within an order.
 Key variables in the dataset are following:
 
 ``` r
-user = instacart |> 
+user = 
+  instacart |> 
   janitor::clean_names() |> 
   group_by(user_id) |> 
   summarize(n_order = n()) |> 
@@ -45,7 +50,8 @@ user = instacart |>
   the most, with 80 orders each.
 
 ``` r
-pop_product = instacart |> 
+pop_product = 
+  instacart |> 
   janitor::clean_names() |> 
   group_by(product_name) |> 
   summarize(n_product = n()) |> 
@@ -63,7 +69,8 @@ pop_product = instacart |>
   departments.
 
 ``` r
-day_order = instacart |> 
+day_order = 
+  instacart |> 
   janitor::clean_names() |>
   mutate(
     order_dow_label = wday(order_dow + 1, label = TRUE, abbr = FALSE)
@@ -138,7 +145,7 @@ instacart |>
   theme_minimal(base_size = 13)
 ```
 
-![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-6-1.png)<!-- -->
+![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-7-1.png)<!-- -->
 
 **Make a table showing the three most popular items in each of the
 aisles “baking ingredients”, “dog food care”, and “packaged vegetables
@@ -258,7 +265,8 @@ each month?**
 consider the all the zipcodes instead of using only zillow dataset?)…!
 
 ``` r
-zip_counts = zillow_nyc |> 
+zip_counts = 
+  zillow_nyc |> 
   drop_na(zori) |> 
   group_by(zip_code) |> 
   summarize(
@@ -360,124 +368,8 @@ available years. Your plot should facilitate comparisons across
 boroughs. Comment on any significant elements of this plot.**
 
 ``` r
-zillow_nyc |> 
-  mutate(year = str_sub(date, 1, 4)) |>  
-  ggplot(aes(x = year, y = zori, color = county_name)) +
-  geom_point(alpha = .3) +
-  geom_smooth() +
-  labs(
-    title = "NYC Rental Prices (ZORI) Across ZIP Codes Over Time",
-    x = "Year",
-    y = "ZORI (Rental Price Index)",
-    color = "County"
-  ) 
-```
-
-    ## `geom_smooth()` using method = 'loess' and formula = 'y ~ x'
-
-    ## Warning: Removed 6834 rows containing non-finite outside the scale range
-    ## (`stat_smooth()`).
-
-    ## Warning: Removed 6834 rows containing missing values or values outside the scale range
-    ## (`geom_point()`).
-
-![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-13-1.png)<!-- -->
-
-``` r
-zillow_nyc %>% 
-  mutate(year = str_sub(date, 1, 4)) %>%
-  group_by(county_name, year) %>%
-  summarize(avg_zori = mean(zori, na.rm = TRUE)) %>%
-  ggplot(aes(x = year, y = avg_zori, color = county_name)) +
-  geom_line(size = 1) +
-  geom_point() +
-  labs(
-    title = "Average Rental Price Trends Across NYC Boroughs",
-    x = "Year",
-    y = "Average ZORI",
-    color = "Borough"
-  ) +
-  theme_minimal()
-```
-
-    ## `summarise()` has grouped output by 'county_name'. You can override using the
-    ## `.groups` argument.
-
-    ## Warning: Using `size` aesthetic for lines was deprecated in ggplot2 3.4.0.
-    ## ℹ Please use `linewidth` instead.
-    ## This warning is displayed once every 8 hours.
-    ## Call `lifecycle::last_lifecycle_warnings()` to see where this warning was
-    ## generated.
-
-    ## Warning: Removed 5 rows containing missing values or values outside the scale range
-    ## (`geom_line()`).
-
-    ## `geom_line()`: Each group consists of only one observation.
-    ## ℹ Do you need to adjust the group aesthetic?
-
-    ## Warning: Removed 5 rows containing missing values or values outside the scale range
-    ## (`geom_point()`).
-
-![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-14-1.png)<!-- -->
-
-``` r
-zillow_nyc |> 
-  mutate(year = str_sub(date, 1, 4)) |> 
-  ggplot(aes(x = year, y = zori, color = county_name)) +
-  geom_point(alpha = 0.4) +
-  geom_smooth(se = FALSE) + 
-  facet_grid(. ~ county_name) +
-  labs(
-    title = "Distribution of Rental Prices by Borough and Year",
-    x = "Year",
-    y = "ZORI (Rental Price Index)",
-    fill = "County"
-  ) +
-  theme_minimal()
-```
-
-    ## `geom_smooth()` using method = 'loess' and formula = 'y ~ x'
-
-    ## Warning: Removed 6834 rows containing non-finite outside the scale range
-    ## (`stat_smooth()`).
-
-    ## Warning: Removed 6834 rows containing missing values or values outside the scale range
-    ## (`geom_point()`).
-
-![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-15-1.png)<!-- -->
-
-``` r
-zillow_nyc %>% 
-  mutate(year = as.numeric(str_sub(date, 1, 4))) %>%  
-  ggplot(aes(x = year, y = zori, color = county_name)) +
-  geom_point(alpha = 0.2, size = 0.7) +   # ZIP-level points
-  geom_smooth(se = FALSE, size = 1.2) +  # Borough trend highlight
-  labs(
-    title = "NYC Rental Prices Within ZIP Codes Over Time",
-    subtitle = "ZIP-level data with borough-level trend lines",
-    x = "Year",
-    y = "ZORI (Rental Price Index)",
-    color = "Borough"
-  ) +
-  theme_minimal()
-```
-
-    ## `geom_smooth()` using method = 'gam' and formula = 'y ~ s(x, bs = "cs")'
-
-    ## Warning: Removed 6834 rows containing non-finite outside the scale range
-    ## (`stat_smooth()`).
-
-    ## Warning: Failed to fit group 5.
-    ## Caused by error in `smooth.construct.cr.smooth.spec()`:
-    ## ! x has insufficient unique values to support 10 knots: reduce k.
-
-    ## Warning: Removed 6834 rows containing missing values or values outside the scale range
-    ## (`geom_point()`).
-
-![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-16-1.png)<!-- -->
-
-``` r
-zillow_nyc |> 
+rental_allyear = 
+  zillow_nyc |> 
   mutate(year = as.integer(str_sub(date, 1, 4)))  |> 
   group_by(zip_code, county_name, year) |> 
   summarize(avg_zori = mean(zori, na.rm = TRUE), .groups = "drop") |> 
@@ -487,7 +379,7 @@ zillow_nyc |>
     aes(group = county_name), fun = mean, geom = "line", size = 1.5, alpha = 0.9
   ) +
   labs(
-    title = "ZIP-Level Rental Price Trends with Borough Averages",
+    title = "Rental Price Trends Across Boroughs from 2015 to 2024",
     subtitle = "Thin lines = individual ZIP codes, Thick lines = county-wide trend",
     x = "Year",
     y = "ZORI (Rental Price Index)",
@@ -497,7 +389,368 @@ zillow_nyc |>
     breaks = c(2015, 2017, 2019, 2021, 2023),
     labels = c("2015", "2017", "2019", "2021", "2023")
   ) +
-  theme_minimal()
+  theme_minimal() +
+  theme(legend.position = "bottom") 
+```
+
+    ## Warning: Using `size` aesthetic for lines was deprecated in ggplot2 3.4.0.
+    ## ℹ Please use `linewidth` instead.
+    ## This warning is displayed once every 8 hours.
+    ## Call `lifecycle::last_lifecycle_warnings()` to see where this warning was
+    ## generated.
+
+This plot shows rental price trends in New York City across ZIP codes
+and counties from 2015 to 2024. Only Richmond county has a record from
+2020 to 2024. The Zillow Observed Rent Index (ZORI) has a steady upward
+trend, with a noticeable acceleration after 2021. The thin lines
+indicate individual ZIP codes, showing substantial within-county
+variation. New York county has the widest spread upuntil 8000 ZORI and
+it stands out with the highest rent levels among five counties and the
+steepest increase from 2021 to 2022.
+
+**Compute the average rental price within each ZIP code over each month
+in 2023. Make a reader-friendly plot showing the distribution of
+ZIP-code-level rental prices across boroughs; put differently, your plot
+should facilitate the comparison of the distribution of average rental
+prices across boroughs. Comment on this plot.**
+
+!! question! The question says over each month but the zillow data
+already provides the monthly based rental price for each zip code. Does
+it mean that we need to compute the average over 2023?
+
+``` r
+rental_2023 = 
+  zillow_nyc |> 
+  separate(
+    date, into = c("year", "month", "day")
+  )  |> 
+  filter(year == 2023) |> 
+  group_by(zip_code, county_name) |> 
+  summarize(avg_zori = mean(zori)) |> 
+  ggplot(aes(x = county_name, y = avg_zori)) +
+  geom_boxplot() +
+  labs(
+    title = "Rental Prices Across Boroughs in 2023",    
+    x = "County",
+    y = "Average ZORI (Rental Price Index)"
+    
+  )
+```
+
+    ## `summarise()` has grouped output by 'zip_code'. You can override using the
+    ## `.groups` argument.
+
+``` r
+  theme_minimal() 
+```
+
+    ## List of 136
+    ##  $ line                            :List of 6
+    ##   ..$ colour       : chr "black"
+    ##   ..$ linewidth    : num 0.5
+    ##   ..$ linetype     : num 1
+    ##   ..$ lineend      : chr "butt"
+    ##   ..$ arrow        : logi FALSE
+    ##   ..$ inherit.blank: logi TRUE
+    ##   ..- attr(*, "class")= chr [1:2] "element_line" "element"
+    ##  $ rect                            :List of 5
+    ##   ..$ fill         : chr "white"
+    ##   ..$ colour       : chr "black"
+    ##   ..$ linewidth    : num 0.5
+    ##   ..$ linetype     : num 1
+    ##   ..$ inherit.blank: logi TRUE
+    ##   ..- attr(*, "class")= chr [1:2] "element_rect" "element"
+    ##  $ text                            :List of 11
+    ##   ..$ family       : chr ""
+    ##   ..$ face         : chr "plain"
+    ##   ..$ colour       : chr "black"
+    ##   ..$ size         : num 11
+    ##   ..$ hjust        : num 0.5
+    ##   ..$ vjust        : num 0.5
+    ##   ..$ angle        : num 0
+    ##   ..$ lineheight   : num 0.9
+    ##   ..$ margin       : 'margin' num [1:4] 0points 0points 0points 0points
+    ##   .. ..- attr(*, "unit")= int 8
+    ##   ..$ debug        : logi FALSE
+    ##   ..$ inherit.blank: logi TRUE
+    ##   ..- attr(*, "class")= chr [1:2] "element_text" "element"
+    ##  $ title                           : NULL
+    ##  $ aspect.ratio                    : NULL
+    ##  $ axis.title                      : NULL
+    ##  $ axis.title.x                    :List of 11
+    ##   ..$ family       : NULL
+    ##   ..$ face         : NULL
+    ##   ..$ colour       : NULL
+    ##   ..$ size         : NULL
+    ##   ..$ hjust        : NULL
+    ##   ..$ vjust        : num 1
+    ##   ..$ angle        : NULL
+    ##   ..$ lineheight   : NULL
+    ##   ..$ margin       : 'margin' num [1:4] 2.75points 0points 0points 0points
+    ##   .. ..- attr(*, "unit")= int 8
+    ##   ..$ debug        : NULL
+    ##   ..$ inherit.blank: logi TRUE
+    ##   ..- attr(*, "class")= chr [1:2] "element_text" "element"
+    ##  $ axis.title.x.top                :List of 11
+    ##   ..$ family       : NULL
+    ##   ..$ face         : NULL
+    ##   ..$ colour       : NULL
+    ##   ..$ size         : NULL
+    ##   ..$ hjust        : NULL
+    ##   ..$ vjust        : num 0
+    ##   ..$ angle        : NULL
+    ##   ..$ lineheight   : NULL
+    ##   ..$ margin       : 'margin' num [1:4] 0points 0points 2.75points 0points
+    ##   .. ..- attr(*, "unit")= int 8
+    ##   ..$ debug        : NULL
+    ##   ..$ inherit.blank: logi TRUE
+    ##   ..- attr(*, "class")= chr [1:2] "element_text" "element"
+    ##  $ axis.title.x.bottom             : NULL
+    ##  $ axis.title.y                    :List of 11
+    ##   ..$ family       : NULL
+    ##   ..$ face         : NULL
+    ##   ..$ colour       : NULL
+    ##   ..$ size         : NULL
+    ##   ..$ hjust        : NULL
+    ##   ..$ vjust        : num 1
+    ##   ..$ angle        : num 90
+    ##   ..$ lineheight   : NULL
+    ##   ..$ margin       : 'margin' num [1:4] 0points 2.75points 0points 0points
+    ##   .. ..- attr(*, "unit")= int 8
+    ##   ..$ debug        : NULL
+    ##   ..$ inherit.blank: logi TRUE
+    ##   ..- attr(*, "class")= chr [1:2] "element_text" "element"
+    ##  $ axis.title.y.left               : NULL
+    ##  $ axis.title.y.right              :List of 11
+    ##   ..$ family       : NULL
+    ##   ..$ face         : NULL
+    ##   ..$ colour       : NULL
+    ##   ..$ size         : NULL
+    ##   ..$ hjust        : NULL
+    ##   ..$ vjust        : num 1
+    ##   ..$ angle        : num -90
+    ##   ..$ lineheight   : NULL
+    ##   ..$ margin       : 'margin' num [1:4] 0points 0points 0points 2.75points
+    ##   .. ..- attr(*, "unit")= int 8
+    ##   ..$ debug        : NULL
+    ##   ..$ inherit.blank: logi TRUE
+    ##   ..- attr(*, "class")= chr [1:2] "element_text" "element"
+    ##  $ axis.text                       :List of 11
+    ##   ..$ family       : NULL
+    ##   ..$ face         : NULL
+    ##   ..$ colour       : chr "grey30"
+    ##   ..$ size         : 'rel' num 0.8
+    ##   ..$ hjust        : NULL
+    ##   ..$ vjust        : NULL
+    ##   ..$ angle        : NULL
+    ##   ..$ lineheight   : NULL
+    ##   ..$ margin       : NULL
+    ##   ..$ debug        : NULL
+    ##   ..$ inherit.blank: logi TRUE
+    ##   ..- attr(*, "class")= chr [1:2] "element_text" "element"
+    ##  $ axis.text.x                     :List of 11
+    ##   ..$ family       : NULL
+    ##   ..$ face         : NULL
+    ##   ..$ colour       : NULL
+    ##   ..$ size         : NULL
+    ##   ..$ hjust        : NULL
+    ##   ..$ vjust        : num 1
+    ##   ..$ angle        : NULL
+    ##   ..$ lineheight   : NULL
+    ##   ..$ margin       : 'margin' num [1:4] 2.2points 0points 0points 0points
+    ##   .. ..- attr(*, "unit")= int 8
+    ##   ..$ debug        : NULL
+    ##   ..$ inherit.blank: logi TRUE
+    ##   ..- attr(*, "class")= chr [1:2] "element_text" "element"
+    ##  $ axis.text.x.top                 :List of 11
+    ##   ..$ family       : NULL
+    ##   ..$ face         : NULL
+    ##   ..$ colour       : NULL
+    ##   ..$ size         : NULL
+    ##   ..$ hjust        : NULL
+    ##   ..$ vjust        : num 0
+    ##   ..$ angle        : NULL
+    ##   ..$ lineheight   : NULL
+    ##   ..$ margin       : 'margin' num [1:4] 0points 0points 2.2points 0points
+    ##   .. ..- attr(*, "unit")= int 8
+    ##   ..$ debug        : NULL
+    ##   ..$ inherit.blank: logi TRUE
+    ##   ..- attr(*, "class")= chr [1:2] "element_text" "element"
+    ##  $ axis.text.x.bottom              : NULL
+    ##  $ axis.text.y                     :List of 11
+    ##   ..$ family       : NULL
+    ##   ..$ face         : NULL
+    ##   ..$ colour       : NULL
+    ##   ..$ size         : NULL
+    ##   ..$ hjust        : num 1
+    ##   ..$ vjust        : NULL
+    ##   ..$ angle        : NULL
+    ##   ..$ lineheight   : NULL
+    ##   ..$ margin       : 'margin' num [1:4] 0points 2.2points 0points 0points
+    ##   .. ..- attr(*, "unit")= int 8
+    ##   ..$ debug        : NULL
+    ##   ..$ inherit.blank: logi TRUE
+    ##   ..- attr(*, "class")= chr [1:2] "element_text" "element"
+    ##  $ axis.text.y.left                : NULL
+    ##  $ axis.text.y.right               :List of 11
+    ##   ..$ family       : NULL
+    ##   ..$ face         : NULL
+    ##   ..$ colour       : NULL
+    ##   ..$ size         : NULL
+    ##   ..$ hjust        : num 0
+    ##   ..$ vjust        : NULL
+    ##   ..$ angle        : NULL
+    ##   ..$ lineheight   : NULL
+    ##   ..$ margin       : 'margin' num [1:4] 0points 0points 0points 2.2points
+    ##   .. ..- attr(*, "unit")= int 8
+    ##   ..$ debug        : NULL
+    ##   ..$ inherit.blank: logi TRUE
+    ##   ..- attr(*, "class")= chr [1:2] "element_text" "element"
+    ##  $ axis.text.theta                 : NULL
+    ##  $ axis.text.r                     :List of 11
+    ##   ..$ family       : NULL
+    ##   ..$ face         : NULL
+    ##   ..$ colour       : NULL
+    ##   ..$ size         : NULL
+    ##   ..$ hjust        : num 0.5
+    ##   ..$ vjust        : NULL
+    ##   ..$ angle        : NULL
+    ##   ..$ lineheight   : NULL
+    ##   ..$ margin       : 'margin' num [1:4] 0points 2.2points 0points 2.2points
+    ##   .. ..- attr(*, "unit")= int 8
+    ##   ..$ debug        : NULL
+    ##   ..$ inherit.blank: logi TRUE
+    ##   ..- attr(*, "class")= chr [1:2] "element_text" "element"
+    ##  $ axis.ticks                      : list()
+    ##   ..- attr(*, "class")= chr [1:2] "element_blank" "element"
+    ##  $ axis.ticks.x                    : NULL
+    ##  $ axis.ticks.x.top                : NULL
+    ##  $ axis.ticks.x.bottom             : NULL
+    ##  $ axis.ticks.y                    : NULL
+    ##  $ axis.ticks.y.left               : NULL
+    ##  $ axis.ticks.y.right              : NULL
+    ##  $ axis.ticks.theta                : NULL
+    ##  $ axis.ticks.r                    : NULL
+    ##  $ axis.minor.ticks.x.top          : NULL
+    ##  $ axis.minor.ticks.x.bottom       : NULL
+    ##  $ axis.minor.ticks.y.left         : NULL
+    ##  $ axis.minor.ticks.y.right        : NULL
+    ##  $ axis.minor.ticks.theta          : NULL
+    ##  $ axis.minor.ticks.r              : NULL
+    ##  $ axis.ticks.length               : 'simpleUnit' num 2.75points
+    ##   ..- attr(*, "unit")= int 8
+    ##  $ axis.ticks.length.x             : NULL
+    ##  $ axis.ticks.length.x.top         : NULL
+    ##  $ axis.ticks.length.x.bottom      : NULL
+    ##  $ axis.ticks.length.y             : NULL
+    ##  $ axis.ticks.length.y.left        : NULL
+    ##  $ axis.ticks.length.y.right       : NULL
+    ##  $ axis.ticks.length.theta         : NULL
+    ##  $ axis.ticks.length.r             : NULL
+    ##  $ axis.minor.ticks.length         : 'rel' num 0.75
+    ##  $ axis.minor.ticks.length.x       : NULL
+    ##  $ axis.minor.ticks.length.x.top   : NULL
+    ##  $ axis.minor.ticks.length.x.bottom: NULL
+    ##  $ axis.minor.ticks.length.y       : NULL
+    ##  $ axis.minor.ticks.length.y.left  : NULL
+    ##  $ axis.minor.ticks.length.y.right : NULL
+    ##  $ axis.minor.ticks.length.theta   : NULL
+    ##  $ axis.minor.ticks.length.r       : NULL
+    ##  $ axis.line                       : list()
+    ##   ..- attr(*, "class")= chr [1:2] "element_blank" "element"
+    ##  $ axis.line.x                     : NULL
+    ##  $ axis.line.x.top                 : NULL
+    ##  $ axis.line.x.bottom              : NULL
+    ##  $ axis.line.y                     : NULL
+    ##  $ axis.line.y.left                : NULL
+    ##  $ axis.line.y.right               : NULL
+    ##  $ axis.line.theta                 : NULL
+    ##  $ axis.line.r                     : NULL
+    ##  $ legend.background               : list()
+    ##   ..- attr(*, "class")= chr [1:2] "element_blank" "element"
+    ##  $ legend.margin                   : 'margin' num [1:4] 5.5points 5.5points 5.5points 5.5points
+    ##   ..- attr(*, "unit")= int 8
+    ##  $ legend.spacing                  : 'simpleUnit' num 11points
+    ##   ..- attr(*, "unit")= int 8
+    ##  $ legend.spacing.x                : NULL
+    ##  $ legend.spacing.y                : NULL
+    ##  $ legend.key                      : list()
+    ##   ..- attr(*, "class")= chr [1:2] "element_blank" "element"
+    ##  $ legend.key.size                 : 'simpleUnit' num 1.2lines
+    ##   ..- attr(*, "unit")= int 3
+    ##  $ legend.key.height               : NULL
+    ##  $ legend.key.width                : NULL
+    ##  $ legend.key.spacing              : 'simpleUnit' num 5.5points
+    ##   ..- attr(*, "unit")= int 8
+    ##  $ legend.key.spacing.x            : NULL
+    ##  $ legend.key.spacing.y            : NULL
+    ##  $ legend.frame                    : NULL
+    ##  $ legend.ticks                    : NULL
+    ##  $ legend.ticks.length             : 'rel' num 0.2
+    ##  $ legend.axis.line                : NULL
+    ##  $ legend.text                     :List of 11
+    ##   ..$ family       : NULL
+    ##   ..$ face         : NULL
+    ##   ..$ colour       : NULL
+    ##   ..$ size         : 'rel' num 0.8
+    ##   ..$ hjust        : NULL
+    ##   ..$ vjust        : NULL
+    ##   ..$ angle        : NULL
+    ##   ..$ lineheight   : NULL
+    ##   ..$ margin       : NULL
+    ##   ..$ debug        : NULL
+    ##   ..$ inherit.blank: logi TRUE
+    ##   ..- attr(*, "class")= chr [1:2] "element_text" "element"
+    ##  $ legend.text.position            : NULL
+    ##  $ legend.title                    :List of 11
+    ##   ..$ family       : NULL
+    ##   ..$ face         : NULL
+    ##   ..$ colour       : NULL
+    ##   ..$ size         : NULL
+    ##   ..$ hjust        : num 0
+    ##   ..$ vjust        : NULL
+    ##   ..$ angle        : NULL
+    ##   ..$ lineheight   : NULL
+    ##   ..$ margin       : NULL
+    ##   ..$ debug        : NULL
+    ##   ..$ inherit.blank: logi TRUE
+    ##   ..- attr(*, "class")= chr [1:2] "element_text" "element"
+    ##  $ legend.title.position           : NULL
+    ##  $ legend.position                 : chr "right"
+    ##  $ legend.position.inside          : NULL
+    ##  $ legend.direction                : NULL
+    ##  $ legend.byrow                    : NULL
+    ##  $ legend.justification            : chr "center"
+    ##  $ legend.justification.top        : NULL
+    ##  $ legend.justification.bottom     : NULL
+    ##  $ legend.justification.left       : NULL
+    ##  $ legend.justification.right      : NULL
+    ##  $ legend.justification.inside     : NULL
+    ##  $ legend.location                 : NULL
+    ##  $ legend.box                      : NULL
+    ##  $ legend.box.just                 : NULL
+    ##  $ legend.box.margin               : 'margin' num [1:4] 0cm 0cm 0cm 0cm
+    ##   ..- attr(*, "unit")= int 1
+    ##  $ legend.box.background           : list()
+    ##   ..- attr(*, "class")= chr [1:2] "element_blank" "element"
+    ##  $ legend.box.spacing              : 'simpleUnit' num 11points
+    ##   ..- attr(*, "unit")= int 8
+    ##   [list output truncated]
+    ##  - attr(*, "class")= chr [1:2] "theme" "gg"
+    ##  - attr(*, "complete")= logi TRUE
+    ##  - attr(*, "validate")= logi TRUE
+
+The plot shows the rental prices across counties in 2023. There are
+differences in median rental prices and the speadness of prices among
+zipcodes within each county. New York has the highest median rent price
+and the greatest variability having two outliers. On the other hands,
+Rickmond has the least variability and the lowest median rental prices.
+
+**Combine the two previous plots into a single graphic, and export this
+to a results folder in your repository.**
+
+``` r
+rental_allyear / rental_2023 
 ```
 
     ## Warning: Removed 531 rows containing non-finite outside the scale range
@@ -506,13 +759,105 @@ zillow_nyc |>
     ## Warning: Removed 531 rows containing missing values or values outside the scale range
     ## (`geom_line()`).
 
-![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-17-1.png)<!-- -->
+    ## Warning: Removed 36 rows containing non-finite outside the scale range
+    ## (`stat_boxplot()`).
 
-Compute the average rental price within each ZIP code over each month in
-2023. Make a reader-friendly plot showing the distribution of
-ZIP-code-level rental prices across boroughs; put differently, your plot
-should facilitate the comparison of the distribution of average rental
-prices across boroughs. Comment on this plot.
+![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-16-1.png)<!-- -->
 
-Combine the two previous plots into a single graphic, and export this to
-a results folder in your repository.
+``` r
+rental_plot = rental_allyear + rental_2023 + plot_layout(ncol = 2)
+
+ggsave("results/rental_combined.png", rental_plot, width = 12, height = 5, dpi = 300)
+```
+
+    ## Warning: Removed 531 rows containing non-finite outside the scale range
+    ## (`stat_summary()`).
+
+    ## Warning: Removed 531 rows containing missing values or values outside the scale range
+    ## (`geom_line()`).
+
+    ## Warning: Removed 36 rows containing non-finite outside the scale range
+    ## (`stat_boxplot()`).
+
+# Problem 3
+
+**Load, tidy, merge, and organize the data sets.** - exclude
+participants less than 21 years of age, and those with missing
+demographic data - encode data with reasonable variable classes
+(i.e. not numeric, and using factors with the ordering of tables and
+plots in mind).
+
+``` r
+#accelerometer data 
+accel = 
+  read_csv("data/nhanes_accel.csv") |> 
+  janitor::clean_names() 
+```
+
+    ## Rows: 250 Columns: 1441
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## dbl (1441): SEQN, min1, min2, min3, min4, min5, min6, min7, min8, min9, min1...
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+``` r
+#demographic data
+covar = 
+  read_csv("data/nhanes_covar.csv", skip = 4) |> 
+  janitor::clean_names() |> 
+  filter(age >= 21) |> 
+  drop_na() |> 
+  mutate(
+    sex = case_match(
+      sex,
+      1 ~ "male",
+      2 ~ "female"
+    ),
+    education = case_match(
+      education,
+      1 ~ "Less than high school",
+      2 ~ "High school equivalent",
+      3 ~ "More than high school"
+    )
+  )
+```
+
+    ## Rows: 250 Columns: 5
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## dbl (5): SEQN, sex, age, BMI, education
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+merged dataset ;
+
+``` r
+final_merged = 
+  left_join(covar, accel, by = "seqn") |> 
+  group_by(education, sex) |> 
+  summarize(
+    n_count = n(), 
+    .groups = "drop"
+  ) |> 
+  knitr::kable() 
+```
+
+Produce a reader-friendly table for the number of men and women in each
+education category, and create a visualization of the age distributions
+for men and women in each education category. Comment on these items.
+
+Traditional analyses of accelerometer data focus on the total activity
+over the day. Using your tidied dataset, aggregate across minutes to
+create a total activity variable for each participant. Plot these total
+activities (y-axis) against age (x-axis); your plot should compare men
+to women and have separate panels for each education level. Include a
+trend line or a smooth to illustrate differences. Comment on your plot.
+
+Accelerometer data allows the inspection activity over the course of the
+day. Make a three-panel plot that shows the 24-hour activity time
+courses for each education level and use color to indicate sex. Describe
+in words any patterns or conclusions you can make based on this graph;
+including smooth trends may help identify differences.
